utf8 for windows

--- a/src/main/resources/static/f/eh1/info1/developer.html
+++ b/src/main/resources/static/f/eh1/info1/developer.html
@@ -1,5 +1,6 @@
 <h3>developer page</h3>
 <div>
+<div>windows alternative: ↥</div>
 	<a href="http://xahlee.info/comp/unicode_arrows.html"> 🡡</a> 🡑🡡 ⯆ ⯅
 	№<span class="">🕏</span> ⌂🏠 ⌄ ⌃ 🗂 🖶 <a
 		href="https://www.utf8icons.com/subsets/miscellaneous-symbols-and-pictographs/600">
