again font awesome because windows utf 8 not understand

--- a/src/main/resources/static/f/eh1/info1/developer.html
+++ b/src/main/resources/static/f/eh1/info1/developer.html
@@ -1,7 +1,12 @@
 <h3>developer page</h3>
+<i class="fa fa-arrow-up"></i>
+<i class="fa fa-home"  style="f1ont-size:18px;"></i>
+<i class="fa fa-key" aria-hidden="true"></i>🗝
+<i class="fa fa-folder-open" aria-hidden="true"></i>🗂
+
 <div>
 <div>windows alternative: ↥</div>
-	<a href="http://xahlee.info/comp/unicode_arrows.html"> 🡡</a> 🡑🡡 ⯆ ⯅
+	<a href="http://xahlee.info/comp/unicode_arrows.html"> 🡡</a> 🡑🡡 ⯆ ⯅🡡
 	№<span class="">🕏</span> ⌂🏠 ⌄ ⌃ 🗂 🖶 <a
 		href="https://www.utf8icons.com/subsets/miscellaneous-symbols-and-pictographs/600">
 		🖨 </a> 🗔🗕 🗖 🗗 <a
