db_design with ERROR

--- a/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/login1.html
@@ -1,7 +1,6 @@
 <div ng-controller="ControllerApp1">
 	<a href="/v/info">🡡</a> 
-	🔐
-	login1 
+	🔐 login1 
 	<span class="w3-right"> <span
 		ng-include="'/f/algoritmed/lib/link-to-login.html'"></span>
 	</span>
