db_design create folder

--- a/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
@@ -27,7 +27,12 @@
 			       {{db_design.fn1()}}
 				</div>
 			</div>
-			<div class="w3-card">{{db_design}}</div>
+			<div class="w3-card w3-small">
+				<pre class=""><code>{{db_design_src}}</code>
+				<command label="l1"></command>
+				<samp></samp>
+			</pre>
+			</div>
 		</div>
 		<div class="w3-third w3-card w3-right-align	">
 			       -:)-
