--- a/src/main/resources/static/f/eh1/info1/developer.html
+++ b/src/main/resources/static/f/eh1/info1/developer.html
@@ -1,4 +1,4 @@
-<h3>developer page</h3>
+<h3 class=" w3-blue-gray w3-small">developer page</h3>
 <i class="fa fa-arrow-up"></i>
 <i class="fa fa-home"  style="f1ont-size:18px;"></i>
 <i class="fa fa-key" aria-hidden="true"></i>🗝
