--- a/src/main/resources/static/f/eh1/info1/info1.html
+++ b/src/main/resources/static/f/eh1/info1/info1.html
@@ -9,7 +9,7 @@
 	</div>
 	<div ng-include="'/f/eh1/info1/processes.html'" ></div>
 	 
-	<h4>Карта сайту <span class="w3-tiny">(/v/)</span> </h4>
+	<h4 class=" w3-blue-gray ">Карта сайту <span class="w3-tiny">(/v/)</span> </h4>
 	<div class="w3-row-padding w3-border-bottom w3-border-top">
 		<div class="w3-twothird ">
 		<div class="w3-blue-gray">
