db recursive with parent_id - error save

--- a/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
@@ -18,10 +18,10 @@
       </div>
     </div>
 	<div class="w3-row-padding w3-border-bottom">
-			<div class="w3-third w3-card">
+			<div class="w3-half w3-card">
 				<div amd-run="programRun.table"></div>
 			</div>
-		<div class="w3-third">
+		<div class="w3-half">
 			<div class="w3-padding-small">
 				<div class="w3-card w3-small">comment
 			       {{db_design.fn1()}}
@@ -29,13 +29,13 @@
 			</div>
 			<div class="w3-card w3-small">
 				<pre class=""><code>{{db_design_src}}</code>
-				<command label="l1"></command>
-				<samp></samp>
 			</pre>
 			</div>
 		</div>
+		<!-- 
 		<div class="w3-third w3-card w3-right-align	">
 			       -:)-
 			</div>
+		 -->
 		</div>
 </div>
