--- a/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
+++ b/src/main/resources/static/f/am-dev/1c-db-tables/1c-db-tables.html
@@ -4,7 +4,7 @@
 	 -->
 	<div class="w3-row-padding w3-border-bottom">
 		<div class="w3-third w3-card">
-			Папки folders
+			<a href="/v/create_tables"> Папки </a> folders
 			<div amd-run="programRun.folders"></div>
 		</div>
 		<div class="w3-third">
