--- a/src/main/resources/static/f/eh1/info1/info1.html
+++ b/src/main/resources/static/f/eh1/info1/info1.html
@@ -12,11 +12,10 @@
 	<h4 class=" w3-blue-gray ">Карта сайту <span class="w3-tiny">(/v/)</span> </h4>
 	<div class="w3-row-padding w3-border-bottom w3-border-top">
 		<div class="w3-twothird ">
-		<div class="w3-blue-gray">
-			<b class="w3-small w13-border-bottom  w13-light-gray"> 
-			Групи
-				сторінок</b>
-		</div>
+			<div class="w3-blue-gray">
+				<b class="w3-small w13-border-bottom  w13-light-gray"> Групи
+					сторінок</b>
+			</div>
 			<div ng-include="'/f/eh1/info1/info_tabs.html'"></div>
 		</div>
 
@@ -33,6 +32,13 @@
 				</a>
 			</div>
 		</div>
+	</div>
+	<div class="w13-small">
+		<div class="w3-blue-gray" style="margin-top: 10px">
+			<b class=" w13-border-bottom  w13-light-gray">Логін ролі
+				і функції </b>
+		</div>
+		<div ng-include="'/f/eh1/info1/info_logins.html'"></div>
 	</div>
 	<div ng-include="'/f/eh1/info1/developer.html'" ></div>
 	<div>
