presentation miska rad Nr.1

--- a/src/main/resources/static/f/eh1/hf1/hf_division.html
+++ b/src/main/resources/static/f/eh1/hf1/hf_division.html
@@ -1,6 +1,14 @@
 <div ng-controller="ControllerApp1">
 	<div ng-include="page.head.headFilePath"></div>
 	<div amd-run="programRun.hf_division"></div>
+	<a href="https://medic.algoritmed.com/v/admin-msp#"> Підрозділи <span
+		class="w3-tiny"> версія 0.0.2 </span>
+	</a>
+	,
+	<a href="http://algoritmed.com/presentation-miska-rada/pidrozdil-registered.png">
+	Зареєестований підрозділ в eHealth
+	</a>
+
 	<h2>to copy from:</h2>
 	<div ng-include="'/f/eh1/hf1/copy-from/admin_msp_msp_divisions.html'"></div>
 </div>
