presentation mr Nr.2

--- a/src/main/resources/static/f/eh1/info1/process_icpc2.html
+++ b/src/main/resources/static/f/eh1/info1/process_icpc2.html
@@ -1,1 +1,15 @@
 TODO:
+<ol>
+	<li><b>МОЗ</b> <a
+		href="http://moz.gov.ua/uploads/0/2955-dn_20180104_13_dod_icpc.pdf">
+			ICPC - 2 – Українська Міжнародна Класифікація ПМД – 2 Видання </a> | <a
+		href="http://moz.gov.ua/uploads/0/2954-dn_20180104_13_dod.pdf">
+			Зв'язки ICPC2 коду з можливими МКХ10 кодуванням </a></li>
+	<li><b>АЛГОРІТМЕД база даних</b>
+		<ol>
+			<li><a href="http://meddoc.algoritmed.com/v/icpc2"> ICPC - 2
+			</a></li>
+			<li></li>
+		</ol></li>
+</ol>
+<div></div>
