--- a/src/main/resources/static/f/eh1/hf1/hf_data.html
+++ b/src/main/resources/static/f/eh1/hf1/hf_data.html
@@ -1,5 +1,7 @@
 <div ng-controller="ControllerApp1">
 	<div style="margin-bottom: 10px;" ng-include="page.head.headFilePath"></div>
+	<a href="https://medic.algoritmed.com/v/admin-msp#!#msp_data_form">
+		дані ЛЗ </a>
 	<h2>to copy from:</h2>
 	<div ng-include="'/f/eh1/hf1/copy-from/admin_msp_msp_data_form.html'"></div>
 </div>
