icpc2 begone a implementation

--- a/src/main/resources/static/f/eh1/hf1/hf_data_form.html
+++ b/src/main/resources/static/f/eh1/hf1/hf_data_form.html
@@ -4,7 +4,7 @@
 			<div ng-include="'/f/algoritmed/form/form_unified1_left.html'"
 				ng-repeat="o in [legalEntity]" ng-init="vo=legalEntity"></div>
 		</div>
-		<div class="w3-half">
+		<div class="w3-half w3-container w3-border-top">
 			<div ng-include="'/f/mvp/html/form_json_doc_form1_fields.html'"
 				ng-init="o=legalEntity;in=false;"></div>
 		</div>
