--- a/src/main/resources/static/f/eh1/info1/process_icpc2.html
+++ b/src/main/resources/static/f/eh1/info1/process_icpc2.html
@@ -1,4 +1,6 @@
+<div>
 TODO:
+<a href="/v/icpc2-test">ICPC2 - використання, тестова сторінка</a>
 <ol>
 	<li><b>МОЗ</b> <a
 		href="http://moz.gov.ua/uploads/0/2955-dn_20180104_13_dod_icpc.pdf">
@@ -12,4 +14,4 @@ TODO:
 			<li></li>
 		</ol></li>
 </ol>
-<div></div>
+</div>
