--- a/src/main/resources/static/f/eh1/info1/test1/app_admin.html
+++ b/src/main/resources/static/f/eh1/info1/test1/app_admin.html
@@ -1,5 +1,7 @@
 <div ng-controller="ControllerApp1">
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> app_admin.html
+  <div amd-run="programRun.folders"></div>
 	<div>x</div>
+	{{folders}}
 </div>
