--- a/src/main/resources/static/f/eh1/info1/test1/app_admin.html
+++ b/src/main/resources/static/f/eh1/info1/test1/app_admin.html
@@ -1,7 +1,24 @@
 <div ng-controller="ControllerApp1">
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> app_admin.html
-  <div amd-run="programRun.folders"></div>
-	<div>x</div>
-	{{folders}}
+
+	<div class="w3-row-padding w3-border-top">
+		<div class="w3-col m2 l2 s2 w3-card">
+			<div class="w3-tiny">
+				<a href="/v/app_admin" class="" title="folders"><i
+					class="fa fa-folder-open"></i> Папки</a>:
+			</div>
+			<div amd-run="programRun.folders"></div>
+		</div>
+
+		<div class="w3-col m4 l4 s4">
+			<div class="w3-card">
+				<div amd-run="programRun.datadictionary"></div>
+			</div>
+		</div>
+	</div>
+
+	<div class="w3-card">
+		<div amd-run="programRun.icpc2"></div>
+	</div>
 </div>
