icd10 first commit

--- a/src/main/resources/static/f/eh1/info1/test1/app_admin.html
+++ b/src/main/resources/static/f/eh1/info1/test1/app_admin.html
@@ -18,7 +18,16 @@
 		</div>
 	</div>
 
-	<div class="w3-card">
-		<div amd-run="programRun.icpc2"></div>
+	<div>
+		ICD10
+		<div class="w3-card" style="height: 110px; overflow: auto;">
+			<div amd-run="programRun.icd10"></div>
+		</div>
+	</div>
+	<div>
+		ICPC2
+		<div class="w3-card">
+			<div amd-run="programRun.icpc2"></div>
+		</div>
 	</div>
 </div>
