--- a/src/main/resources/static/f/eh1/info1/test1/app_admin.html
+++ b/src/main/resources/static/f/eh1/info1/test1/app_admin.html
@@ -19,7 +19,10 @@
 	</div>
 
 	<div>
-		ICD10
+		ICD10 <input
+		ng-model="seekIcd10"
+		placeholder="знайти МКХ10"
+		 class="w3-border am-width-100pr" />
 		<div class="w3-card" style="height: 110px; overflow: auto;">
 			<div amd-run="programRun.icd10"></div>
 		</div>
