--- a/src/main/resources/static/f/eh1/info1/test1/app_admin.html
+++ b/src/main/resources/static/f/eh1/info1/test1/app_admin.html
@@ -21,6 +21,9 @@
 	<div class="w3-border-top">
 		ICD10 <input ng-model="seekIcd10" placeholder="знайти МКХ10"
 			class="w3-border am-width-100pr" />
+			<span class="w3-tiny">
+			режим1 | режим2
+			 </span>
 		<div class="w3-card" style="height: 210px; overflow: auto;">
 			<div amd-run="programRun.icd10"></div>
 		</div>
