--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -3,5 +3,10 @@
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> icpc2-test1.html
 
+
 	<div>x</div>
+	<div class="w3-card">
+		<div amd-run="programRun.table"></div>
+	</div>
+  <div>x</div>
 </div>
