icpc2 patient data

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -5,8 +5,11 @@
 
 
 	<div>x</div>
+  <div class="w3-card">
+    <div amd-run="programRun.table2"></div>
+  </div>
+  <div>x</div>
 	<div class="w3-card">
 		<div amd-run="programRun.table"></div>
 	</div>
-  <div>x</div>
 </div>
