icpc2-nakaz74 edit first commit

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -3,11 +3,13 @@
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> icpc2-test1.html
 
-
+  <div>x</div>
+    <div amd-run="programRun.icpc2_nakaz74"></div>
 	<div>x</div>
   <div class="w3-card">
     <div amd-run="programRun.table2"></div>
   </div>
+
   <div>x</div>
 	<div class="w3-card">
 		<div amd-run="programRun.table"></div>
