j2c table update first commit

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -6,11 +6,12 @@
   <div>x</div>
     <div amd-run="programRun.icpc2_nakaz74"></div>
 	<div>x</div>
-  <div class="w3-card">
-    <div amd-run="programRun.table2"></div>
-  </div>
+	<div class="w3-card">
+		<div amd-run="programRun.icpc2_patient"></div>
+	</div>
+	<div ng-include="'/f/eh1/info1/test1/icpc2_patient-table.html'"></div>
 
-  <div>x</div>
+	<div>x</div>
 	<div class="w3-card">
 		<div amd-run="programRun.table"></div>
 	</div>
