--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -1,6 +1,6 @@
 <div am-obj="scopeObj" ng-repeat="o in [scopeObj]">
 	<div class="w3-card">
-		<table class="w13-table w3-hoverable" style="width: 100%">
+		<table class="w13-table w3-hoverable" style="w1idth: 100%">
 			<thead>
 				<tr class="w3-tiny w3-gray">
 					<th title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys">
@@ -9,20 +9,29 @@
 			</thead>
 			<tbody>
 				<tr style="position: relative;" ng-repeat="icpc2 in o.list"
-					ng-click="programRun.icpc2_nakaz74.edit(icpc2)">
+					ng-click="programRun.icpc2_nakaz74.edit(icpc2)"
+					>
 					<td title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys"
 						ng-init="k1=1">{{icpc2[k]}}:
 						{{programRun.icpc2_nakaz74.colValue(k, icpc2)}}</td>
-					<td></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
-	<div ng-if="programRun.icpc2_nakaz74.editObj">
-		<div ng-repeat="(k,v) in icpc2_nakaz74.col_keys">
-			<b class="w3-small"> {{v}} </b> <select
-				ng-model="programRun.icpc2_nakaz74.editObj[k]">
+	<div ng-if="programRun.icpc2_nakaz74.editObj"
+	 class="w3-card"
+	>
+		<div ng-repeat="(k,v) in icpc2_nakaz74.col_keys"
+		ng-init="values=programRun.icpc2_nakaz74.colValues(k, icpc2)"
+		>
+		
+			<b class="w3-small"> {{v}} </b> 
+			<select size="{{values.objKeys().length+1}}"
+			n1g-click=""
+				ng-model="programRun.icpc2_nakaz74.editObj[k]"
+				>
 				<option
+					ng-class="{'w3-light-gray':programRun.icpc2_nakaz74.editObj[k]==k1}"
 					ng-repeat="(k1,v1) in programRun.icpc2_nakaz74.colValues(k, icpc2)"
 					value="{{k1}}">{{v1}}</option>
 			</select>
