--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -3,9 +3,12 @@
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> icpc2-test1.html
 
-  <div>x</div>
+  <div>ICPC2 наказ Nr 74</div>
     <div amd-run="programRun.icpc2_nakaz74"></div>
-	<div>x</div>
+	<div>Пацієнти 
+	<span class="w3-btn w3-border" ng-click="programRun.icpc2_patient.add_patient()">+</span>
+	
+	</div>
 	<div class="w3-card">
 		<div amd-run="programRun.icpc2_patient"></div>
 	</div>
