--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -27,7 +27,7 @@
 		
 			<b class="w3-small"> {{v}} </b> 
 			<select size="{{values.objKeys().length+1}}"
-			n1g-click=""
+			ng-click="programRun.icpc2_nakaz74.click(k)"
 				ng-model="programRun.icpc2_nakaz74.editObj[k]"
 				>
 				<option
