--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -3,16 +3,32 @@
 	<a class="w3-hover-light-gray" title="" href="/"> <i
 		class="fa fa-home"></i></a> icpc2-test1.html
 
-  <div>ICPC2 наказ Nr 74</div>
-    <div amd-run="programRun.icpc2_nakaz74"></div>
-	<div>Пацієнти 
-	<span class="w3-btn w3-border" ng-click="programRun.icpc2_patient.add_patient()">+</span>
-	
+	<div>
+		ICPC2 наказ Nr 74 <span class="w3-btn w3-border"
+			ng-click="programRun.icpc2_nakaz74.add_row()">+</span>
+	</div>
+	<div amd-run="programRun.icpc2_nakaz74"></div>
+	<div>
+		Пацієнти 
+		<input ng-model="seekIcpc2Patient" placeholder="знайти ICPC2"
+      class="w3-border am-width-100pr" />
+		<span class="w3-btn w3-border"
+			ng-click="programRun.icpc2_patient.add_patient()">+</span>
 	</div>
 	<div class="w3-card">
 		<div amd-run="programRun.icpc2_patient"></div>
 	</div>
+	<!-- 
 	<div ng-include="'/f/eh1/info1/test1/icpc2_patient-table.html'"></div>
+	 -->
+
+	<div>
+		ICPC2 пошук <input ng-model="seekIcpc2" placeholder="знайти ICPC2"
+			class="w3-border am-width-100pr" />
+	</div>
+	<div class="w3-card">
+		<div amd-run="programRun.icpc2_list"></div>
+	</div>
 
 	<div>x</div>
 	<div class="w3-card">
