--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
@@ -1,4 +1,4 @@
-<div>
+<div am-obj="scopeObj" ng-repeat="o in [scopeObj]">
 	<div class="w3-card">
 		<table class="w13-table w3-hoverable" style="w1idth: 100%">
 			<thead>
@@ -17,7 +17,8 @@
 		</table>
 	</div>
 	<div ng-if="programRun.icpc2_patient.editObj" class="w3-card">
-	 <span class="w3-btn w3-border" ng-click="programRun.icpc2_patient.minus_patient()">-</span>
+		<span class="w3-btn w3-border"
+			ng-click="programRun.icpc2_patient.minus_patient()">-</span>
 		<div ng-repeat="(k,v) in icpc2_patient.col_keys">
 			<b class="w3-small"> {{v}}:</b> <input
 				ng-blur="programRun.icpc2_patient.blur(k)"
