--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -10,7 +10,7 @@
 	<div amd-run="programRun.icpc2_nakaz74"></div>
 	<div>
 		Пацієнти 
-		<input ng-model="seekIcpc2Patient" placeholder="знайти ICPC2"
+		<input ng-model="seekIcpc2Patient" placeholder="знайти пацієнта"
       class="w3-border am-width-100pr" />
 		<span class="w3-btn w3-border"
 			ng-click="programRun.icpc2_patient.add_patient()">+</span>
