--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
@@ -8,10 +8,14 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="patient in icpc2_patient.list"
-					ng-click="programRun.icpc2_patient.edit(patient)">
-					<td ng-repeat="(k,v) in icpc2_patient.col_keys">
+				<tr ng-repeat="patient in icpc2_patient.list">
+					<td ng-repeat="(k,v) in icpc2_patient.col_keys"
+						ng-click="programRun.icpc2_patient.edit(patient)">
 						{{patient[k]}}</td>
+					<td ng-if="programRun.icpc2_patient.editObj==patient"><span
+						class="w3-btn"
+						ng-click="programRun.icpc2_patient.addICPC2(patient)"> 123
+					</span></td>
 				</tr>
 			</tbody>
 		</table>
