j2c icpc2nakaz74 icd10 save

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_list-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_list-table.html
@@ -9,7 +9,7 @@
       </thead>
       <tbody>
 				<tr style="position: relative;" ng-repeat="icpc2 in o.list"
-					ng-click="programRun.icpc2_list.click(icpc2)">
+					ng-click="programRun.icpc2_list.save_icpc2(icpc2)">
 					<td title="{{k}}" ng-repeat="(k,v) in icpc2_list.col_keys"
 						ng-init="k1=1">{{icpc2[k]}}</td>
 				</tr>
