--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -18,16 +18,24 @@
 	<div class="w3-card">
 		<div amd-run="programRun.icpc2_patient"></div>
 	</div>
-	<!-- 
-	<div ng-include="'/f/eh1/info1/test1/icpc2_patient-table.html'"></div>
-	 -->
 
 	<div>
 		ICPC2 пошук <input ng-model="seekIcpc2" placeholder="знайти ICPC2"
 			class="w3-border am-width-100pr" />
 	</div>
-	<div class="w3-card">
+	<div class="w3-card"
+	style="height: 100px; overflow: auto;"
+	>
 		<div amd-run="programRun.icpc2_list"></div>
+	</div>
+
+	<div class="w3-border-top">
+		ICD10 <input ng-model="seekIcd10" placeholder="знайти МКХ10"
+			class="w3-border am-width-100pr" /> <span class="w3-tiny">
+			режим1 | режим2 </span>
+		<div class="w3-card" style="height: 210px; overflow: auto;">
+			<div amd-run="programRun.icd10"></div>
+		</div>
 	</div>
 
 </div>
