--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -3,6 +3,7 @@
 		<table class="w13-table w3-hoverable" style="w1idth: 100%">
 			<thead>
 				<tr class="w3-tiny w3-gray">
+					<th><i class="fa fa-calendar-o" aria-hidden="true"></i></th>
 					<th title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys">
 						{{v}}</th>
 				</tr>
@@ -10,8 +11,10 @@
 			<tbody>
 				<tr style="position: relative;" ng-repeat="icpc2 in o.list"
 					ng-click="programRun.icpc2_nakaz74.edit(icpc2)"
-					ng-class="{'w3-light-gray':programRun.icpc2_nakaz74.editObj==icpc2}"
-					>
+					ng-class="{'w3-light-gray':programRun.icpc2_nakaz74.editObj==icpc2}">
+					<td
+						title="{{icpc2.created | date : 'longDate'}}/{{icpc2.updated | date : 'short'}}">
+						{{icpc2.created | date : "dd.MM"}}</td>
 					<td title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys"
 						ng-init="k1=1">{{icpc2[k]}}:
 						{{programRun.icpc2_nakaz74.colValue(k, icpc2)}}</td>
