--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -7,14 +7,30 @@
 					<th title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys">
 						{{v}}</th>
 				</tr>
+				<tr
+				class="w3-tiny w3-center"
+				>
+					<td
+					class="w3-border"
+					ng-repeat="n in ['2','3','4','12','5,6,7,8','10','9','11']"
+					>
+					{{n}}
+					</td>
+				</tr>
 			</thead>
 			<tbody>
 				<tr style="position: relative;" ng-repeat="icpc2 in o.list"
 					ng-click="programRun.icpc2_nakaz74.edit(icpc2)"
 					ng-class="{'w3-light-gray':programRun.icpc2_nakaz74.editObj==icpc2}">
-					<td
+					<td><span
 						title="{{icpc2.created | date : 'longDate'}}/{{icpc2.updated | date : 'short'}}">
-						{{icpc2.created | date : "dd.MM"}}</td>
+							{{icpc2.created | date : "dd.MM"}} </span> <span class="w3-tiny"
+						title="{{icpc2.family_name}} {{
+              icpc2.first_name}} {{
+              icpc2.second_name}}">
+							{{icpc2.family_name.substring(0,1)}}{{
+							icpc2.first_name.substring(0,1)}}{{
+							icpc2.second_name.substring(0,1)}} </span></td>
 					<td title="{{k}}" ng-repeat="(k,v) in icpc2_nakaz74.col_keys"
 						ng-init="k1=1">{{icpc2[k]}}:
 						{{programRun.icpc2_nakaz74.colValue(k, icpc2)}}</td>
