--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
@@ -14,7 +14,8 @@
 						{{patient[k]}}</td>
 					<td ng-if="programRun.icpc2_patient.editObj==patient"><span
 						class="w3-btn"
-						ng-click="programRun.icpc2_patient.addICPC2(patient)"> 123
+						title="Записати пацієнта в таблицю ICPC2 наказ 74"
+						ng-click="programRun.icpc2_patient.addICPC2(patient)"> +
 					</span></td>
 				</tr>
 			</tbody>
