save timestamp in j2c table

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_patient-table.html
@@ -11,7 +11,12 @@
 				<tr ng-repeat="patient in icpc2_patient.list">
 					<td ng-repeat="(k,v) in icpc2_patient.col_keys"
 						ng-click="programRun.icpc2_patient.edit(patient)">
-						{{patient[k]}}</td>
+						<span
+						ng-if="'col_10823'==k"> 
+						{{patient[k]|date:'mediumDate'}} </span>
+<span
+            ng-if="'col_10823'!=k"> {{patient[k]}} </span>
+					</td>
 					<td ng-if="programRun.icpc2_patient.editObj==patient"><span
 						class="w3-btn"
 						title="Записати пацієнта в таблицю ICPC2 наказ 74"
@@ -29,18 +34,18 @@
 			<span ng-if="'col_10823'==k">
 				<input ng-model="programRun.icpc2_patient.editObj.col_10823Date.d"
 				type="number" style="width: 55px" min=1 max=31
-				ng-blur="programRun.icpc2_patient.blurDate(k)"
+				ng-change="programRun.icpc2_patient.blurDate(k)"
 				>-<input
 				ng-model="programRun.icpc2_patient.editObj.col_10823Date.m"
 				type="number" style="width: 55px" min=1 max=12
-				ng-blur="programRun.icpc2_patient.blurDate(k)"
+				ng-change="programRun.icpc2_patient.blurDate(k)"
 >-<input
 				ng-model="programRun.icpc2_patient.editObj.col_10823Date.y"
 				type="number" style="width: 75px" min=1900
-				ng-blur="programRun.icpc2_patient.blurDate(k)"
+				ng-change="programRun.icpc2_patient.blurDate(k)"
 >
 				{{programRun.icpc2_patient.editObj.col_10823|date:'fullDate'}}
-			</span> {{k}} <span ng-if="'col_10823'!=k"> <input
+			</span> <span ng-if="'col_10823'!=k"> <input
 				ng-blur="programRun.icpc2_patient.blur(k)"
 				ng-model="programRun.icpc2_patient.editObj[k]" />
 			</span>
