nakaz 74 table order desc

--- a/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2-test1.html
@@ -7,7 +7,8 @@
 		ICPC2 наказ Nr 74 <span class="w3-btn w3-border"
 			ng-click="programRun.icpc2_nakaz74.add_row()">+</span>
 	</div>
-	<div amd-run="programRun.icpc2_nakaz74"></div>
+	<div amd-run="programRun.icpc2_nakaz74"
+	></div>
 	<div>
 		Пацієнти 
 		<input ng-model="seekIcpc2Patient" placeholder="знайти пацієнта"
