--- a/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
+++ b/src/main/resources/static/f/eh1/info1/test1/icpc2_nakaz74-table.html
@@ -1,5 +1,7 @@
 <div am-obj="scopeObj" ng-repeat="o in [scopeObj]">
-	<div class="w3-card">
+	<div class="w3-card"
+	style="height: 250px; overflow: auto;margin-bottom: 10px;"
+	>
 		<table class="w13-table w3-hoverable" style="w1idth: 100%">
 			<thead>
 				<tr class="w3-tiny w3-gray">
